layout shift on add event master button solved

--- a/src/styles/ImageUploader.module.css
+++ b/src/styles/ImageUploader.module.css
@@ -1,30 +1,23 @@
 .uploadImageViewContainer {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 695px;
 }
 
 .dragAreaAndButtonsContainer {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
-  width: 335px;
   justify-content: flex-start;
 }
-
 
 .clickOrDrag, .dragging, .dragged {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid var(--buskr-pink); */
   border:none;
   height: 400px;
-  width: 335px;
   border-radius: 10px;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
   color: var(--buskr-gray)
 }
 
@@ -37,48 +30,42 @@
   color: var(--buskr-white);
 }
 
-/* .dragged {
-  border: none;
-  height: 400px;
-  width: 335px;
-} */
-
 .currentImage {
-  /* border: 2px solid var(--buskr-pink); */
   border-radius: 10px;
   height: 400px;
   width: 335px;
   object-fit: cover;
 }
 
-
 .backRemoveButtonsContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
 }
 
-.skipAndRemoveButton {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.removeAllImages, .skipThisStep {
+.removeImage, .goBack {
   border: none;
   background-color: var(--buskr-purple);
   padding: 15px 15px 15px 15px;
-  /* margin: 20px 0px 20px 0px; */
   border-radius: 10px;
   color: white;
   font-size: 15px;
   font-weight: bold;
   width: 158px;
-
 }
 
-.removeAllImages {
+.removeImage {
   background-color: var(--buskr-orange)
+}
+
+.addImageGreyedOut {
+  text-align: center;
+  border: none;
+  padding: 15px 15px 15px 15px;
+  margin: 20px 0px 20px 0px;
+  border-radius: 10px;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  background-color: var(--buskr-lightgray);
 }
